# chrononauts-quest

./: .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/workflows/: blog.yaml
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: labyrinth.rs  lib.rs
backend/examples/: board_client.rs  mock_client.rs  web_client.rs
backend/src/: board.rs  consts.rs  labyrinth.rs  logging.rs  main.rs  state.rs
backend/src/logging/: gcloud.rs
backend/src/server/: board.rs  mod.rs  website.rs
backend/src/state/: game.rs  global.rs  labyrinth-layout.txt  labyrinth.rs  ws_session.rs
blog/: _config.yml  about.md
blog/_includes/: figure.html
blog/_posts/: 2024-05-31-the-first-puzzle.md
blog/assets/: main.scss
board/hw/: chrononauts-board.kicad_pcb  chrononauts-board.kicad_sch
board/hw/Outputs/Assembly/: chrononauts-board-all-pos.csv
board/hw/Outputs/Fab/: chrononauts-board-B_Cu.gbl  chrononauts-board-B_Mask.gbs  chrononauts-board-Edge_Cuts.gm1  chrononauts-board-F_Cu.gtl  chrononauts-board-F_Silkscreen.gto  chrononauts-board-NPTH.drl  chrononauts-board-PTH.drl
board/sw/: Cargo.toml  README.md  input.css  sdkconfig.defaults
board/sw/.cargo/: config.toml
board/sw/src/: accelerometer.rs  captive.rs  communication.rs  consts.rs  event.rs  game_loop.rs  http_server.rs  lib.rs  main.rs  peripherals.rs  radio.rs  utils.rs  wifi.rs  ws.rs
board/sw/src/communication/: message.rs
board/sw/src/event/: game_loop.rs  message_transmission.rs  packet_reception.rs  packet_transmission.rs  ws_transmission.rs
board/sw/src/peripherals/: accelerometer.rs  led.rs  potentiometer.rs
board/sw/src/radio/: message.rs  transceiver.rs  transport.rs
board/sw/src/web/: index.html  script.js
concept/: README.md  questions.md
concept/landing-page/: index.html  script.js  style.css
hw/chrononauts-board/: README.md  chrononauts-board.kicad_pcb  chrononauts-board.kicad_pro  chrononauts-board.kicad_sch  fp-lib-table  sym-lib-table
hw/chrononauts-board/Outputs/BOM/: chrononauts-board.csv
hw/chrononauts-board/Outputs/Fab/: chrononauts-board-B_Cu.gbl  chrononauts-board-B_Mask.gbs  chrononauts-board-B_Paste.gbp  chrononauts-board-B_Silkscreen.gbo  chrononauts-board-Edge_Cuts.gm1  chrononauts-board-F_Cu.gtl  chrononauts-board-F_Mask.gts  chrononauts-board-F_Paste.gtp  chrononauts-board-F_Silkscreen.gto  chrononauts-board-NPTH.drl  chrononauts-board-PTH.drl
sw/.devcontainer/: Dockerfile  devcontainer.json  install.sh
sw/chrononauts-board/: .gitignore  Cargo.toml  sdkconfig.defaults  tailwind.config.js
sw/chrononauts-board/.cargo/: config.toml
sw/chrononauts-board/src/: captive.rs  consts.rs  event.rs  main.rs  radio.rs  server.rs  wifi.rs  ws.rs
sw/chrononauts-board/src/event/: game_loop.rs  message_transmission.rs  packet_transmission.rs
sw/chrononauts-board/src/radio/: message.rs  packet.rs
sw/chrononauts-board/src/web/: style.css
website/: .env  package-lock.json  package.json
website/app/: layout.tsx  page.tsx
website/components/: labyrinth.module.css  login.tsx  terminal.module.css  terminal.tsx
website/game/: backend.ts  game.ts  io.ts  labyrinth.ts  login.ts  vfs.ts
website/game/commands/: cat.ts  conninfo.ts  decrypt.ts  help.ts  index.ts  locate.ts  ls.ts
website/hooks/: backend.ts  storage.ts
website/utils/: json.ts  sleep.ts
