[package]
name = "backend"
version = "0.1.0"
authors = [
    "Simon Berger <simon@siku2.io>",
    "Kevin Schaerer <kevin@schaerer.dev>",
]
edition = "2021"
resolver = "2"
rust-version = "1.79"

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
