[package]
name = "chrononauts_board"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>", "Kevin Schaerer <kevin@schaerer.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.79"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
backend-api = { path = "../../backend/api", features = ["board"]}
esp-idf-svc = { git = "https://github.com/mineiwik/esp-idf-svc.git", default-features = false }
heapless = "0.8"
log = { version = "0.4", default-features = false }
thiserror = "1.0.63"
urlencoding = "2"
cc1101 = {git = "https://github.com/mineiwik/cc1101.git", branch = "main", features = ["std"]}
postcard = "1.0.10"
serde = "1.0.209"
serde_json = "1.0.127"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[[bin]]
name = "chrononauts_board"
path = "src/main.rs"
harness = false

[lib]
name = "chrononauts_board"
path = "src/lib.rs"
harness = false

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }
