[package]
name = "chrononauts-board"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>", "Kevin Schaerer <kevin@schaerer.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.79"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
urlencoding = "2.1.3"
heapless = "0.8.0"

[build-dependencies]
embuild = { version = "0.32.0", features = ["espidf"] }

[[bin]]
name = "chrononauts-board"
harness = false
