[package]
name = "chrononauts-board"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>", "Kevin Schaerer <kevin@schaerer.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.79"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
esp-idf-svc = { version = "0.49", default-features = false }
heapless = "0.8"
log = { version = "0.4", default-features = false }
thiserror = "1.0.63"
urlencoding = "2"
cc1101 = {git = "https://github.com/mineiwik/cc1101.git", branch = "main", features = ["std"]}

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[[bin]]
name = "chrononauts-board"
harness = false
